# eigen_control_toolbox

./: .codecov.sh  .coverage.sh  .gitignore  .rosinstall  .travis.yml  .upstream.repos  README.mkd  codecov.yml
eigen_state_space_systems/: CMakeLists.txt  package.xml
eigen_state_space_systems/config/: test.yaml
eigen_state_space_systems/doxygen/: Doxyfile
eigen_state_space_systems/doxygen/html/: annotated.html  classeigen__control__toolbox_1_1_causal_savitky_golay-members.html  classeigen__control__toolbox_1_1_causal_savitky_golay.html  classeigen__control__toolbox_1_1_causal_savitky_golay__inherit__graph.map  classeigen__control__toolbox_1_1_causal_savitky_golay__inherit__graph.md5  classeigen__control__toolbox_1_1_controller-members.html  classeigen__control__toolbox_1_1_controller.html  classeigen__control__toolbox_1_1_controller__coll__graph.map  classeigen__control__toolbox_1_1_controller__coll__graph.md5  classeigen__control__toolbox_1_1_discrete_state_space-members.html  classeigen__control__toolbox_1_1_discrete_state_space.html  classeigen__control__toolbox_1_1_discrete_state_space__inherit__graph.map  classeigen__control__toolbox_1_1_discrete_state_space__inherit__graph.md5  classeigen__control__toolbox_1_1_fir_filter-members.html  classeigen__control__toolbox_1_1_fir_filter.html  classeigen__control__toolbox_1_1_fir_filter__coll__graph.map  classeigen__control__toolbox_1_1_fir_filter__coll__graph.md5  classeigen__control__toolbox_1_1_fir_filter__inherit__graph.map  classeigen__control__toolbox_1_1_fir_filter__inherit__graph.md5  classeigen__control__toolbox_1_1_first_order_high_pass-members.html  classeigen__control__toolbox_1_1_first_order_high_pass.html  classeigen__control__toolbox_1_1_first_order_high_pass__coll__graph.map  classeigen__control__toolbox_1_1_first_order_high_pass__coll__graph.md5  classeigen__control__toolbox_1_1_first_order_low_pass-members.html  classeigen__control__toolbox_1_1_first_order_low_pass.html  classeigen__control__toolbox_1_1_first_order_low_pass__inherit__graph.map  classeigen__control__toolbox_1_1_first_order_low_pass__inherit__graph.md5  classeigen__control__toolbox_1_1_savitky_golay-members.html  classeigen__control__toolbox_1_1_savitky_golay.html  classeigen__control__toolbox_1_1_savitky_golay__coll__graph.md5  classeigen__control__toolbox_1_1_savitky_golay__inherit__graph.map  classes.html  dir_000003_000000.html  dir_0774f8e8433ae896de53b836130c917b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_6b8cbc7b8c3913b5b7f0b342458f0b4d.html  dir_6b8cbc7b8c3913b5b7f0b342458f0b4d_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  eigen__common__filters_8h.html  (+86 more)
eigen_state_space_systems/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js  variables_0.js
eigen_state_space_systems/doxygen/latex/: annotated.tex  classeigen__control__toolbox_1_1_causal_savitky_golay.tex  classeigen__control__toolbox_1_1_causal_savitky_golay__coll__graph.md5  classeigen__control__toolbox_1_1_controller.tex  classeigen__control__toolbox_1_1_controller__coll__graph.md5  classeigen__control__toolbox_1_1_discrete_state_space.tex  classeigen__control__toolbox_1_1_discrete_state_space__inherit__graph.md5  classeigen__control__toolbox_1_1_fir_filter.tex  classeigen__control__toolbox_1_1_fir_filter__coll__graph.md5  classeigen__control__toolbox_1_1_fir_filter__inherit__graph.md5  classeigen__control__toolbox_1_1_first_order_high_pass.tex  classeigen__control__toolbox_1_1_first_order_high_pass__inherit__graph.md5  classeigen__control__toolbox_1_1_first_order_low_pass.tex  classeigen__control__toolbox_1_1_first_order_low_pass__inherit__graph.md5  classeigen__control__toolbox_1_1_savitky_golay.tex  classeigen__control__toolbox_1_1_savitky_golay__inherit__graph.md5  dir_0774f8e8433ae896de53b836130c917b.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6b8cbc7b8c3913b5b7f0b342458f0b4d.tex  dir_6b8cbc7b8c3913b5b7f0b342458f0b4d_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  eigen__common__filters_8h.tex  eigen__common__filters_8h__dep__incl.md5  eigen__common__filters_8h__incl.md5  eigen__control__utils_8h.tex  eigen__control__utils_8h__dep__incl.md5  eigen__control__utils_8h__incl.md5  eigen__controllers_8cpp.tex  eigen__controllers_8cpp__incl.md5  eigen__controllers_8h.tex  eigen__controllers_8h__dep__incl.md5  eigen__controllers_8h__incl.md5  eigen__fir__filters_8cpp.tex  eigen__fir__filters_8cpp__incl.md5  eigen__fir__filters_8h.tex  eigen__fir__filters_8h__dep__incl.md5  eigen__fir__filters_8h__incl.md5  eigen__iir__filters_8cpp.tex  eigen__iir__filters_8cpp__incl.md5  (+22 more)
eigen_state_space_systems/include/eigen_state_space_systems/: eigen_common_filters.h  eigen_control_utils.h  eigen_controllers.h  eigen_controllers_impl.h  eigen_fir_filters.h  eigen_fir_filters_impl.h  eigen_iir_filters.h  eigen_iir_filters_impl.h  eigen_sg_filter.h  eigen_sg_filter_impl.h  eigen_state_space_systems.h  eigen_state_space_systems_impl.h
eigen_state_space_systems/launch/: test_controllers.launch
eigen_state_space_systems/src/: test_filters.cpp  test_pid.cpp  test_state_space_matrix.cpp
frequency_identification/: CMakeLists.txt  package.xml
